<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="home"
        android:icon="@drawable/ic_baseline_home_24"/>


    <item
        android:id="@+id/cart"
        android:title="cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>

    <item
        android:id="@+id/MyOrders"
        android:title="My Orders"
        android:icon="@drawable/ic_baseline_request_quote_24"/>

    <item
        android:id="@+id/user"
        android:title="user"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>



</menu>