<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myhomepage"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fff"
    >

...

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="SHOP BY CATEGORY"
                android:textAllCaps="true"
                android:textColor="@color/myshopTitle"
                android:textSize="17dp"
                android:textStyle="bold" />


...
